--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.8.0",
     "ipfs-http-client": "50.1.2",
     "next": "12.0.7",
